Remove overflow-x auto from blockquote to prevent short, single line blockquotes from scrolling unnecessarily

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -90,7 +90,6 @@ blockquote {
   margin: 1.5em 10px;
   padding: 0.7em 10px;
   quotes: "\201C" "\201D";
-  overflow-x: auto;
 
   p {
     display: inline;
